# snake-CPP-SDL2

./: .gitattributes  CMakeLists.txt  Makefile  README.md  bscript  getSDL2  setInfo
cmake/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
cmake/cmake/: x86_64-w64-mingw32.cmake
include/: bestscores.hpp  bgcolor.hpp  body.hpp  button.hpp  cell.hpp  cell_SDL.hpp  cible.hpp  common.hpp  configuration.hpp  configure.hpp  eye.hpp  functions.hpp  game.hpp  head.hpp  newGame.hpp  pallette.hpp  score.hpp  snake.hpp  sound.hpp  soundsConf.hpp  text.hpp  welcome.hpp  window.hpp
src/: CMakeLists.txt  bestscores.cpp  bgcolor.cpp  body.cpp  button.cpp  cell.cpp  cell_SDL.cpp  cible.cpp  configuration.cpp  configure.cpp  eye.cpp  functions.cpp  game.cpp  head.cpp  main.cpp  newGame.cpp  pallette.cpp  score.cpp  snake.cpp  sound.cpp  soundsConf.cpp  text.cpp  welcome.cpp  window.cpp
x86_64-w64-mingw32/include/: activdbg.h  activdbg100.h  alg.h  alink.h  comlite.h  commapi.h  compressapi.h  cor.h  corhdr.h  d3d11_1.h  d3d11sdklayers.h  dmemmgr.h  docobjectservice.h  documenttarget.h  dpapi.h  dwrite_1.h  dxgi1_2.h  fsrmerr.h  ftw.h  functiondiscoverykeys_devpkey.h  gpio.h  hidclass.h  highlevelmonitorconfigurationapi.h  l2cmn.h  msopc.h  napcertrelyingparty.h  napcommon.h  napmanagement.h  napservermanagement.h  napsystemhealthagent.h  napsystemhealthvalidator.h  ndkinfo.h  pathcch.h  physicalmonitorenumerationapi.h  sapi.h  sapi51.h  sapi53.h  sapi54.h  sas.h  tlbref.h  (+13 more)
x86_64-w64-mingw32/lib/ldscripts/: i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xn  i386pep.xr  i386pep.xu
