cmake_minimum_required(VERSION 3.5.1)
set(CMAKE_BUILD_TYPE Release)
project(SNAKE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

message("Form Source Dir : CMAKE_SYSTEM_NAME = " ${CMAKE_SYSTEM_NAME})
message("Form Source Dir : CMAKE_SOURCE_DIR = " ${CMAKE_SOURCE_DIR})
if("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/sdl2)
set(SDL2_PATH ${CMAKE_SOURCE_DIR}/SDL2Bins/SDL2 CACHE BOOL "" FORCE )
set(SDL2_IMAGE_PATH ${CMAKE_SOURCE_DIR}/SDL2Bins/SDL2_image CACHE BOOL "" FORCE )
set(SDL2_TTF_PATH ${CMAKE_SOURCE_DIR}/SDL2Bins/SDL2_ttf CACHE BOOL "" FORCE )
#set(SDL_LOCATION ${CMAKE_SOURCE_DIR}/SDL2/SDL2)
#add_subdirectory(${SDL_LOCATION})
endif()
add_subdirectory(src)

