cmake_minimum_required(VERSION 3.5.1)
set(CMAKE_BUILD_TYPE Release)
project(SNAKE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
	list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/sdl2)
	if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
		set(SDL2_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2/x86_64-w64-mingw32 CACHE BOOL "" FORCE )
		set(SDL2_IMAGE_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2_image/x86_64-w64-mingw32  CACHE BOOL "" FORCE )
		set(SDL2_TTF_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2_ttf/x86_64-w64-mingw32  CACHE BOOL "" FORCE )
		set(SDL2_MIXER_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2_mixer/x86_64-w64-mingw32  CACHE BOOL "" FORCE )
	else() 
		set(SDL2_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2/i686-w64-mingw32 CACHE BOOL "" FORCE )
		set(SDL2_IMAGE_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2_image/i686-w64-mingw32  CACHE BOOL "" FORCE )
		set(SDL2_TTF_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2_ttf/i686-w64-mingw32  CACHE BOOL "" FORCE )
		set(SDL2_MIXER_PATH ${CMAKE_SOURCE_DIR}/SDL2/SDL2_mixer/i686-w64-mingw32  CACHE BOOL "" FORCE )
	endif()
else()
	list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/sdl2)
endif()
add_subdirectory(src)

